Fixed axis labels on the barchart for readability

--- a/style.css
+++ b/style.css
@@ -2,10 +2,7 @@
 body {
   padding: 0;
   margin: 0;
-  font: 18px/1.5 -apple-system, BlinkMacSystemFont, "avenir next", avenir,
-    "Segoe UI", "lucida grande", "helvetica neue", helvetica, "Fira Sans",
-    roboto, noto, "Droid Sans", cantarell, oxygen, ubuntu,
-    "franklin gothic medium", "century gothic", "Liberation Sans", sans-serif;
+  font: 18px/1.5 "Segoe UI";
 }
 
 h1,
@@ -27,6 +24,7 @@ h3 {
   height: 100%;
   text-align: center;
   position: relative;
+  font: "Segoe UI";
 }
 
 .text-indentation {
